--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,45 @@
 <resources>
     <string name="app_name">SearchITSpecialists</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="image_description">Photograph of a certain news </string>
+    <string name="image_detail_description">Photo of selected news</string>
+    <string name="image_detail_repost">Share news with friends</string>
+    <string name="button_read_full_news">Read full news</string>
+    <string name="textView_detail_title">Detail</string>
+    <string name="textView_detail_by_author">by</string>
+    <string name="textView_like_news">Favorite</string>
+    <string name="user_hint_email">Email</string>
+    <string name="user_hint_password">Password</string>
+    <string name="textView_user_registration">Don\'t have account? Sign up</string>
+    <string name="textView_user_login">Already member? Log in</string>
+    <string name="textView_login_title">Welcome back</string>
+    <string name="textView_registration_title">Create account</string>
+    <string name="textView_login_description">Enter you credential to continue</string>
+    <string name="textVew_registration_description">Sign ip to get started!</string>
+    <string name="button_login_user">Log in</string>
+    <string name="button_login_hr">Log in as HR</string>
+    <string name="button_info_next">Дальше</string>
+    <string name="textView_title_personal_info">Личные данные</string>
+    <string name="button_registration_user">Sign up</string>
+    <string name="textView_footer_splash">Поиск IT-специалистов</string>
+    <string-array name="experience_user">
+        <item>Более 6 лет</item>
+        <item>Нет опыта</item>
+        <item>От 3 до 6 лет</item>
+        <item>От 1 года до 3 лет</item>
+    </string-array>
+    <string-array name="type_experience">
+        <item>Полная занятость</item>
+        <item>Частичная занятость</item>
+        <item>Проектная работа</item>
+        <item>Стажировка</item>
+        <item>Волонтерство</item>
+    </string-array>
+    <string-array name="сhart_experience">
+        <item>Полный день</item>
+        <item>Сменныый график</item>
+        <item>Гибкий график</item>
+        <item>Удаленная работа</item>
+    </string-array>
 </resources>
